# tree-sitter-integerbasic

./: .gitignore  .npmignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README-crate.md  README.md  binding.gyp  grammar-src.js  grammar.js  integerbasic.tmGrammar.json  package-lock.json  package.json  pyproject.toml  scanner-src.cc  setup.py  token_list.txt  token_processor.py  tree-sitter.json
.github/: README.md
.github/workflows/: node.js.yml
bindings/c/: tree-sitter-integerbasic.h  tree-sitter-integerbasic.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_integerbasic/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
script/: alphatoks.py  build.ps1  build.py  grammar-src.js  integerbasic.tmGrammar.json  scanner-src.cc  token_list.json  token_list.txt  token_processor.py
src/: grammar.json  node-types.json  parser.c  scanner.cc
test/: README.md
test/corpus/: arrays-strings.txt  control-statements.txt  emulation.txt  general.txt  graphics.txt  input-output.txt  utility.txt  vars-arithmetic.txt  vars-illegal.txt  vars-legal.txt
test/highlight/: demo.ibas  functions.ibas  input-output.ibas
