[package]
name = "tree-sitter-integerbasic"
description = "parser for integer basic"
version = "3.0.0"
authors = ["Daniel Gordon"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "integerbasic"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/dfgordon/tree-sitter-integerbasic"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
